--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="lasagna.html">Lasagna</a>
+    <a href="lasagna.html">Vegan Lasagna</a>
+    <a href="chocolatecake.html">Vegan Chocolate Cake</a>
   </body>
 </html>
