Add new page link to vegan Cheesecake

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="lasagna.html">Vegan Lasagna</a>
     <a href="chocolatecake.html">Vegan Chocolate Cake</a>
+    <a href="cheesecake.html">Vegan Cheesecake</a>
   </body>
 </html>
